{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 42,
  "lineage": "fd61b83a-e8b5-d249-47c9-b6d9d7950c33",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "biofa_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0070c5311b7677678",
            "arn": "arn:aws:ec2:us-east-1:140123363166:instance/i-0c596813cf34211d6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c596813cf34211d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "biofa-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-081fa7be37ca84473",
            "private_dns": "ip-10-123-1-110.ec2.internal",
            "private_ip": "10.123.1.110",
            "public_dns": "ec2-44-201-39-12.compute-1.amazonaws.com",
            "public_ip": "44.201.39.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ccc0dcfca25bf724",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073f73d4f9ea18e11",
            "tags": {
              "Name": "biofa-node"
            },
            "tags_all": {
              "Name": "biofa-node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0157bdf82eb1e8d96"
            ]
          },
          "dependencies": [
            "aws_key_pair.biofa_key",
            "aws_security_group.biofa_sg",
            "aws_subnet.biofa_public_subnet",
            "aws_vpc.biofa_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "biofa_internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140123363166:internet-gateway/igw-0fdaec22d38982e9e",
            "id": "igw-0fdaec22d38982e9e",
            "owner_id": "140123363166",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-05d74d8719656eefc"
          },
          "dependencies": [
            "aws_vpc.biofa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "biofa_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075fc45b17a6c0cc3",
            "original_route_table_id": "rtb-0f234eef9ddff7d3d",
            "route_table_id": "rtb-05ce9314cfa0ca988",
            "vpc_id": "vpc-05d74d8719656eefc"
          },
          "dependencies": [
            "aws_route_table.biofa_public_rt",
            "aws_vpc.biofa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "biofa_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fdaec22d38982e9e",
            "id": "r-rtb-05ce9314cfa0ca9881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05ce9314cfa0ca988",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.biofa_internet_gw",
            "aws_route_table.biofa_public_rt",
            "aws_vpc.biofa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "biofa_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140123363166:route-table/rtb-05ce9314cfa0ca988",
            "id": "rtb-05ce9314cfa0ca988",
            "owner_id": "140123363166",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d74d8719656eefc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.biofa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "biofa_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140123363166:security-group/sg-0157bdf82eb1e8d96",
            "description": "Biofa Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0157bdf82eb1e8d96",
            "ingress": [
              {
                "cidr_blocks": [
                  "200.146.10.153/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "biofa-sg",
            "name_prefix": "",
            "owner_id": "140123363166",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "biofa-sg"
            },
            "tags_all": {
              "Name": "biofa-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d74d8719656eefc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.biofa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "biofa_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140123363166:subnet/subnet-073f73d4f9ea18e11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073f73d4f9ea18e11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140123363166",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public"
            },
            "tags_all": {
              "Name": "dev-public"
            },
            "vpc_id": "vpc-05d74d8719656eefc"
          },
          "dependencies": [
            "aws_vpc.biofa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "biofa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140123363166:vpc/vpc-05d74d8719656eefc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-000b9931de3976687",
            "default_route_table_id": "rtb-0f234eef9ddff7d3d",
            "default_security_group_id": "sg-02d46148d98d83630",
            "dhcp_options_id": "dopt-094bd9eba43a45f86",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05d74d8719656eefc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f234eef9ddff7d3d",
            "owner_id": "140123363166",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}